# planer

./: .bzrignore  CMakeLists.txt  Projekt.txt  Przedmiot.txt
src/: CMakeLists.txt  calendar.cxx  calendar.hxx  category.cxx  category.hxx  categorywidget.cxx  categorywidget.hxx  group.cxx  group.hxx  groupwidget.cxx  groupwidget.hxx  main.cxx  playground.cxx  playground.hxx  slot.cxx  slot.hxx  slotwidget.cxx  slotwidget.hxx  subject.cxx  subject.hxx  subjectwidget.cxx  subjectwidget.hxx
test/: CMakeLists.txt  calendar_test.cxx
